--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
 
     </div>
 
+    <div id="popup-container">
+      <div class="popup">
+        <h2 id="success-message">Kazandınız.</h2>
+        <button id="play-again">Tekrar Oyna</button>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
