--- a/index.html
+++ b/index.html
@@ -33,14 +33,9 @@
         <line x1="130" y1="170" x2="160" y2="190" class="item"></line>
       </svg>
 
-      <div id="wrong-letters">
-       
-      </div>
+      <div id="wrong-letters"></div>
 
-      <div id="word">
-    
-      </div>
-
+      <div id="word"></div>
     </div>
 
     <div id="popup-container">
@@ -49,7 +44,11 @@
         <button id="play-again">Tekrar Oyna</button>
       </div>
     </div>
-
+    <div id="message" class="">
+      <p>
+        Bu harfı zaten girdiniz
+      </p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
